<resources>
    <string name="app_name">ZholAman</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="bigwelcome_text">Welcome, Talgat</string>
    <string name="welcome_text">Check your Overall Trip Performance</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="todo">TODO</string>
    <string name="iconwelcome">Overall Trip</string>
    <string name="dashboard_text">Dashboard</string>
    <string name="mytrip_text">My Trip</string>
    <string name="profile_text">Profile</string>
    <string name="profile_icon">Profile</string>
    <string name="menu_icon">Menu</string>
    <string name="percentoverall">Percent Overall</string>
    <string name="desc">Y</string>
    <string name="home">Home</string>
    <string name="vadodara">Vadodara</string>
    <string name="_17_june_2021_05_40_pm">17 June 2021, 05:40 pm</string>
    <string name="breaking">Breaking</string>
    <string name="aggresive">Aggresive</string>
    <string name="speed">Speed</string>
    <string name="distance">Distance</string>
    <string name="communication_by_call">Communication by call</string>
    <string name="check_message">Check message</string>
    <string name="dashboard">DASHBOARD</string>
    <string name="history_text">History</string>
    <string name="smallhistory_text">All your trips</string>
    <string name="breaking_number_">1</string>
    <string name="aggresive_number_1">70%</string>
    <string name="breaking_number_1">2</string>
    <string name="speed_number_1">90 km/h</string>
    <string name="distance_number_1">10km</string>
    <string name="aggresive_number_2">20%</string>
    <string name="breaking_number_2">1</string>
    <string name="speed_number_2">85 km/h</string>
    <string name="distance_number_2">10km</string>
    <string name="welcome_login_text">Welcome</string>
    <string name="small_welcome_login_text">By signing in you are agreeing our</string>
    <string name="small_welcome_login_text_2">Term and privacy policy</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_password">Remember password</string>
    <string name="forget_password">Forget password</string>
    <string name="driver_profile">Driver Profile</string>
    <string name="fullname_user">Talgat Seop</string>
    <string name="user_name_1">sah_pat</string>
    <string name="total_trips_user_1">Total Trips : 4</string>
    <string name="progress_bar_user_1">84%</string>
    <string name="history_icon_text">History</string>
    <string name="data_end_trip_1">01 June 2022, 05:40 pm</string>
    <string name="total_alert_trip_1">Total Alerts : 12</string>
    <string name="start_text">Start</string>
    <string name="creators_text">Version : 1.0.0 Creators: Kozhabai Aida Orunbassarova Aidana Nuraly Marzhan</string>
    <string name="total_trip_percent_2">74%</string>
    <string name="time_start_1">05:08 PM</string>
    <string name="time_end_1">05:40 PM</string>
    <string name="support_1">For technical support, call this number:</string>
    <string name="support_2">Email: orunbasaraidana@gmail.com</string>
    <string name="support_3">Phone: +7 700 661 1707</string>
</resources>