<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main2">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="410dp"
        android:layout_height="85dp"
        android:background="@color/main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_arrow___left"
            tools:ignore="ImageContrastCheck"
            android:contentDescription="@string/desc" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="16dp"
        android:layout_height="15dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="92dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout2"
        app:srcCompat="@drawable/ic_ant_design_clock_circle_filled"
        android:contentDescription="@string/desc" />
    <TextView
        android:id="@+id/data_end_trip_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="92dp"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/data_end_trip_1"
        android:textColor="@color/gray"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout2" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="337dp"
        android:layout_height="291dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="19dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/data_end_trip_1">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="334dp"
        android:layout_height="70dp"
        android:layout_marginTop="412dp"
        android:background="@color/title"
        app:cardBackgroundColor="@color/main"
        app:cardCornerRadius="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/aggresivepercent_2"
                android:layout_width="83.98dp"
                android:layout_height="51dp"
                android:fontFamily="@font/inter_semibold"

                android:gravity="center"
                android:text="@string/aggresive_number_1"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck" />


            <TextView
                android:id="@+id/breakingnumber_2"
                android:layout_width="76dp"
                android:layout_height="51dp"
                android:fontFamily="@font/inter_semibold"
                android:gravity="center"
                android:text="@string/breaking_number_1"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck" />


            <TextView
                android:id="@+id/speednumber_2"
                android:layout_width="85dp"
                android:layout_height="51dp"
                android:fontFamily="@font/inter_semibold"
                android:gravity="center"
                android:text="@string/speed_number_1"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/distancenumber_2"
                android:layout_width="88dp"
                android:layout_height="51dp"
                android:fontFamily="@font/inter_semibold"
                android:gravity="center"
                android:text="@string/distance_number_1"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="326dp"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/textView16"
                android:layout_width="76dp"
                android:layout_height="14dp"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/inter"

                android:gravity="center"
                android:text="@string/aggresive"
                android:textColor="#FFFFFF"
                android:textSize="11sp"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="83.98dp"
                android:layout_height="14dp"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/inter"

                android:gravity="center"
                android:text="@string/breaking"
                android:textColor="#FFFFFF"
                android:textSize="11sp"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="85dp"
                android:layout_height="14dp"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/inter"

                android:gravity="center"
                android:text="@string/speed"
                android:textColor="#FFFFFF"
                android:textSize="11sp"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="85dp"
                android:layout_height="14dp"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/inter"

                android:gravity="center"
                android:text="@string/distance"
                android:textColor="#FFFFFF"
                android:textSize="11sp"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="32dp"
        android:layout_height="75dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="496dp"
        android:contentDescription="@string/desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_group_12" />

    <TextView
        android:id="@+id/startpoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/home"
        android:textColor="@color/textbl"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView7"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.752" />

    <TextView
        android:id="@+id/endpoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/vadodara"
        android:textColor="@color/textbl"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView7"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.83" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toEndOf="@+id/startpoint"
        app:layout_constraintTop_toBottomOf="@+id/cardView2" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="44dp"
        android:gravity="center"
        android:text="@string/total_trip_percent_2"
        android:textColor="#616161"
        app:layout_constraintStart_toEndOf="@+id/imageView7"
        app:layout_constraintTop_toBottomOf="@+id/cardView2" />

    <TextView
        android:id="@+id/time_start_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="69dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/time_start_1"
        android:textColor="@color/whitegray"
        app:layout_constraintStart_toEndOf="@+id/progressBar"
        app:layout_constraintTop_toBottomOf="@+id/cardView2"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/time_end_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/time_end_1"
        android:textColor="@color/whitegray"
        app:layout_constraintStart_toEndOf="@+id/progressBar"
        app:layout_constraintTop_toBottomOf="@+id/cardView2"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="588dp"
        android:contentDescription="@string/desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_frame_4" />

    <TextView
        android:id="@+id/total_alert_trip_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="588dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/total_alert_trip_1"
        android:textColor="@color/gray"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/imageView8"
        app:layout_constraintTop_toTopOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>