<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/title">

    <androidx.cardview.widget.CardView
        android:layout_width="380dp"
        android:layout_height="150dp"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="20dp"
        app:cardBackgroundColor="@color/purple_500"
        app:cardCornerRadius="15dp">

        <TextView
            android:id="@+id/data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="86dp"
            android:layout_marginTop="9dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/_17_june_2021_05_40_pm"
            android:textColor="@color/white"
            android:textSize="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/safety_score2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="282dp"
            android:layout_marginTop="61dp"
            android:fontFamily="sans-serif-medium"
            android:text="73"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ic_compos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/desc"
            app:srcCompat="@drawable/ic_explore" />
        <TextView
            android:id="@+id/cornering_caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="86dp"
            android:layout_marginTop="35dp"
            android:text="Cornering:"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/speednumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="170dp"
            android:layout_marginTop="35dp"
            android:text="@string/speed_number_1"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/safety_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="325dp"
            android:layout_marginTop="83dp"
            android:text="100"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/dash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="315dp"
            android:layout_marginTop="83dp"
            android:text="/"
            android:textColor="@color/white"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/acceleration_caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="86dp"
            android:layout_marginTop="60dp"
            android:text="Acceleration:"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/aggresivepercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="195dp"
            android:layout_marginTop="60dp"
            android:text="@string/breaking_number_1"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/braking_caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="86dp"
            android:layout_marginTop="85dp"
            android:text="Braking:"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/breakingnumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="155dp"
            android:layout_marginTop="85dp"
            android:text="70%"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/distance_caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="86dp"
            android:layout_marginTop="110dp"
            android:text="Distance:"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/distancenumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="160dp"
            android:layout_marginTop="110dp"
            android:text="10km"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </androidx.cardview.widget.CardView>



</RelativeLayout>