<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <TextView
        android:id="@+id/fullname_user3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="132dp"
        android:fontFamily="sans-serif-black"
        android:text="Project Authors"
        android:textColor="@color/purple_500"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="378dp"
        android:layout_height="406dp"
        android:layout_below="@+id/fullname_user3"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="17dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullname_user3">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="75dp">

            <TextView
                android:id="@+id/job_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="4dp"
                android:fontFamily="sans-serif-medium"
                android:text="UI/UX designer"
                android:textColor="@color/purple_500"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/cardView2"
                app:layout_constraintTop_toBottomOf="@+id/developer_name_1" />

            <TextView
                android:id="@+id/developer_city_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="11dp"
                android:text="Aktau"
                android:textColor="@color/purple_500"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/cardView2"
                app:layout_constraintTop_toBottomOf="@+id/job_1" />

            <TextView
                android:id="@+id/developer_name_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="132dp"
                android:fontFamily="sans-serif-black"
                android:text="Kozhabay Aida"
                android:textColor="@color/purple_500"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.841"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="20dp"
                android:layout_marginStart="16dp"
                app:cardBackgroundColor="@color/purple_500"
                app:cardCornerRadius="20dp"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteY="0dp">


                <ImageView
                    android:id="@+id/imageView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@mipmap/aida1_foreground" />
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/job_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="3dp"
                android:fontFamily="sans-serif-medium"
                android:text="Front End Android Developer"
                android:textColor="@color/purple_500"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/cardView3"
                app:layout_constraintTop_toBottomOf="@+id/developer_name_2" />

            <TextView
                android:id="@+id/developer_city_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="Aktau"
                android:textColor="@color/purple_500"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/cardView3"
                app:layout_constraintTop_toBottomOf="@+id/job_2" />

            <TextView
                android:id="@+id/developer_name_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="88dp"
                android:fontFamily="sans-serif-black"
                android:text="Orunbassarova Aidana"
                android:textColor="@color/purple_500"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView3"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="20dp"
                app:cardBackgroundColor="@color/purple_500"
                app:cardCornerRadius="20dp"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="19dp"
                tools:layout_editor_absoluteY="1dp">

                <ImageView
                    android:id="@+id/imageView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@mipmap/aida_foreground" />
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/job_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="4dp"
                android:fontFamily="sans-serif-medium"
                android:text="Back End Python Developer"
                android:textColor="@color/purple_500"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/cardView4"
                app:layout_constraintTop_toBottomOf="@+id/developer_name_3" />

            <TextView
                android:id="@+id/developer_city_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="Nur-sultan"
                android:textColor="@color/purple_500"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/cardView4"
                app:layout_constraintTop_toBottomOf="@+id/job_3" />

            <TextView
                android:id="@+id/developer_name_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="138dp"
                android:fontFamily="sans-serif-black"
                android:text="Nuraly Marzhan"
                android:textColor="@color/purple_500"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView4"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="20dp"
                app:cardBackgroundColor="@color/purple_500"
                app:cardCornerRadius="20dp"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="19dp"
                tools:layout_editor_absoluteY="1dp">

                <ImageView
                    android:id="@+id/imageView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@mipmap/marzhan_foreground" />
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/job_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="4dp"
                android:fontFamily="sans-serif-medium"
                android:text="Project Supervisor"
                android:textColor="@color/purple_500"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/cardView5"
                app:layout_constraintTop_toBottomOf="@+id/developer_name_4" />

            <TextView
                android:id="@+id/developer_city_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="Nur_sultan"
                android:textColor="@color/purple_500"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/cardView5"
                app:layout_constraintTop_toBottomOf="@+id/job_4" />

            <TextView
                android:id="@+id/developer_name_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="116dp"
                android:fontFamily="sans-serif-black"
                android:text="Amirgaliyev Beibut"
                android:textColor="@color/purple_500"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView5"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="20dp"
                app:cardBackgroundColor="@color/purple_500"
                app:cardCornerRadius="20dp"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="19dp"
                tools:layout_editor_absoluteY="1dp">


                <ImageView
                    android:id="@+id/imageView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@mipmap/agai_foreground" />
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
    <TextView
        android:id="@+id/textView2"
        android:layout_below="@+id/linearLayout3"
        android:layout_width="235dp"
        android:layout_height="56dp"
        android:layout_marginStart="89dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="87dp"
        android:gravity="center"
        android:text="@string/support_1"
        android:textColor="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_below="@+id/textView2"
        android:layout_width="234dp"
        android:layout_height="27dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/support_2"
        android:textColor="@color/purple_500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_below="@+id/textView3"
        android:layout_width="234dp"
        android:layout_height="27dp"
        android:layout_marginStart="90dp"
        android:gravity="center"
        android:text="@string/support_3"
        android:textColor="@color/purple_500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_navigation"
        app:itemBackground="@color/purple_500"
        app:itemTextColor="@drawable/selector"
        app:itemIconTint="@drawable/selector"
        app:menu = "@menu/menu_navigation"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>